--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "decimal.js-light": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "zod": "^3.24.1",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
